Hand over code formatting to `prettier-standard`; convert to new style
Both .js and .json files are automatically formatted from now on upon 
running `npm run format`.
